fixed url alignment in javascript dashboard

--- a/Bruce/dashboard/static/css/style.css
+++ b/Bruce/dashboard/static/css/style.css
@@ -55,6 +55,11 @@
   padding-top: 10;
   margin: 0 auto;
 }
+.url-path-class {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 .company-url {
   font-size: 18px;
   padding-left: 10;
